--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-# Created by venv; see https://docs.python.org/3/library/venv.html
-
 .env
-/Lib/
-/Scripts/
+Lib/
+Scripts/
+pyvenv.cfg
+Include/
+share/
